Fix includes and C inlining after 8035330

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • 9
    • b08

        Change 8035330: Remove G1ParScanPartialArrayClosure and G1ParScanHeapEvacClosure
        broke the dbg build on AIX. That's because do_oop_partial_array() is added in
        a header, but requires inline function par_write_ref() through several inlined
        calls. In some cpp files, like arguments.cpp, par_write_ref() is not defined. Therefore the aix debug VM does not start.

        This can be solved by including g1RemSet.inline.hpp in g1CollectedHeap.inline.hpp.

        Unfortunately this causes a cyclic dependency that breaks the linux build.
        A inline.hpp file is included ahead of a .hpp file, so that the inline.hpp file
        can not see the class declaration.
        This is caused because g1CollectedHeap.inline.hpp is included in sparsePRT.hpp.
        But .inline.hpp files never should be included in .hpp files.

        Fix:

        To resolve this, I changed the inlcude in sparsePRT.hpp to g1CollectedHeap.hpp.
        As consequence, I had to move a row of functions to existing .inline.hpp files.
        I also added g1RemSet.inline.hpp in g1CollectedHeap.inline.hpp.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: